tests/fixtures/invalid/pow_bytes_float_str.py
# Cannot call pow() with Bytes, Float, Str
x = pow(b"hello", 1.0, "hello")
